# cfd-solver-2

./: .gitignore  5x25_square_mesh.csv  5x25_square_results.csv  CMakeLists.txt  CMakePresets.json  LICENSE  commands.txt  main.cpp  main.py  mesh sh=11x21.csv  mesh_sh=10x50.csv  mesh_sh=40x200.csv  mesher.cpp  notes.md  output.csv  python solver for comparison.py  readme.md  ref.py  residuals.csv  resu lts_sh=10x50 M=0.3.csv  results_sh=10x50 M=0.3.csv  results_sh=10x50 M=0.35.csv  results_sh=10x50 M=0.4.csv  results_sh=10x50 M=0.5.csv  results_sh=10x50 M=0.7.csv  results_sh=40x200 M=0.3.csv  setup.cpp  solver.cpp  solver.h  solver_commands.csv  test.py  winmake.bat
old/: amother python solver for compariosn.py  makefile  older python solver.py  proofs for dissipations.py  proofs for fluxes.py  ref.py  solver.h  test.csv  test.py
